Flash message added

--- a/views/customreport.html
+++ b/views/customreport.html
@@ -12,6 +12,9 @@
         </div>
         <% } %>
     </div>
+
+    <%- include('_alert.html'); %>
+    
     <center>
       <img src="/images/undraw_analytics_re_dkf8.svg" alt="dashboatd" class="img-fluid opacity-50" style="max-width: 70vh">
     </center>
