--- a/views/agents.html
+++ b/views/agents.html
@@ -13,6 +13,10 @@
         <% } %>
     </div>
 
+    
+    <%- include('_alert.html'); %>
+    
+
     <div class="table-responsive">
       <table class="table table-striped table-sm">
         <thead>
