--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -13,12 +13,7 @@
         <% } %>
     </div>
 
-    <!-- <div class="col-12 m-auto">
-      <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          You should check in on some of those fields below.
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    </div>       -->
+    <%- include('_alert.html'); %>
 
     <div class="table-responsive">
       <table class="table table-bordered table-striped">
