--- a/views/createcampaign.html
+++ b/views/createcampaign.html
@@ -12,6 +12,8 @@
         </div>
         <% } %>
     </div>
+    
+    <%- include('_alert.html'); %>
 
     <div class="col-md-8 col-lg-8">
       <form method="post" action="/create-campaign">
