--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -12,6 +12,9 @@
         </div>
         <% } %>
     </div>
+
+    <%- include('_alert.html'); %>
+    
     <center>
       <img src="/images/undraw_charts_re_5qe9.svg" alt="dashboatd" class="img-fluid opacity-50 mt-4" style="max-width: 70vh">
     </center>
