--- a/views/createcampaign.html
+++ b/views/createcampaign.html
@@ -14,46 +14,13 @@
     </div>
     
     <%- include('_alert.html'); %>
-
+    
+    
+        
     <div class="col-md-8 col-lg-8">
-      <form method="post" action="/create-campaign">
-        
-        <div class="mb-3">
-          <label for="campaignName" class="form-label">Campaign Name</label>
-          <input type="text" class="form-control" name ="campaignName" id="campaignName" required>
-        </div>        
-        <div class="mb-3">
-          <label for="campaignDescription" class="form-label">Campaign Description</label>
-          <input type="text" class="form-control" name ="campaignDescription" id="campaignDescription">
-        </div>  
-
-        <div class="mb-3">
-          <label for="maxContacts" class="form-label">Max Contacts</label>
-          <input type="number" class="form-control" name ="maxContacts" id="maxContacts" min="1" max="9" required>
-        </div>  
-
-        <div class="mb-3">
-          <label for="phoneNumber" class="form-label">Phone Number</label>
-          <select id="phoneNumber" name="phoneNumber" class="form-select" aria-label="Phone Number" required>
-            <option selected></option>
-            <% phoneNumbers.forEach(function(phoneNumber){ %>
-              <option value="<%=phoneNumber.Id%>"><%=phoneNumber.PhoneNumber%></option>
-            <% }); %>
-          </select>
-        </div>
-        
-
-        <div class="mb-3">
-          <label for="hoursOfOperation" class="form-label">Hours Of Operation</label>
-          <select id="hoursOfOperation" name="hoursOfOperation" class="form-select" aria-label="Hours Of Operation" required>
-            <option selected></option>
-            <% hoursOfOperations.forEach(function(hoursOfOperation){ %>
-              <option value="<%=hoursOfOperation.Id%>"><%=hoursOfOperation.Name%></option>
-            <% }); %>
-          </select>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Save</button>
+      <form name="<%=form.formName%>" method="<%=form.formMethod%>" action="<%=form.formAction%>">
+      <%- include('_form.html', {_form: form}); %>
+      <button type="submit" class="btn btn-primary">Save</button>
       </form>
     </div>
 
