--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -8,16 +8,16 @@
     </h6>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="/">
-          <span data-feather="box" class="align-text-bottom"></span>
+        <a class="nav-link" aria-current="page" href="/campaigns">
+          <span data-feather="list" class="align-text-bottom"></span>
           Campaigns
         </a>
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="/agents">
-          <span data-feather="users" class="align-text-bottom"></span>
-          Agents
+        <a class="nav-link" href="/create-campaign">
+          <span data-feather="plus-square" class="align-text-bottom"></span>
+          Create Campaign
         </a>
       </li>
    
@@ -33,15 +33,15 @@
 
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard">
-          <span data-feather="activity" class="align-text-bottom"></span>
-          Dashboard
+        <a class="nav-link" href="/campaign-dashboard">
+          <span data-feather="server" class="align-text-bottom"></span>
+          Campaign Dashboard
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/custom-report">
-          <span data-feather="crosshair" class="align-text-bottom"></span>
-          Custom Report
+        <a class="nav-link" href="/agent-dashboard">
+          <span data-feather="users" class="align-text-bottom"></span>
+          Agent Dashboard
         </a>
       </li>
     </ul>
