--- a/views/_head.html
+++ b/views/_head.html
@@ -9,7 +9,7 @@
 
     <title>Connect Admin - <%= title %>
     </title>
-    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 
     <!-- Favicons -->
 
@@ -20,7 +20,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="stylesheets/client.css" rel="stylesheet">
+    <link href="/stylesheets/client.css" rel="stylesheet">
 </head>
 
 <body>
