--- a/views/createcampaign.html
+++ b/views/createcampaign.html
@@ -1,29 +1,36 @@
 <%- include('_head.html'); %>
-  <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-      <h1 class="h2">
-        <%= title %>
-      </h1>
-      <% if (true) { %>
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="btn-group me-2">
-            <a href="/" type="button" class="btn btn-sm btn-outline-secondary">Cancel</a>
-          </div>
-        </div>
-        <% } %>
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">
+      <%= title %>
+    </h1>
+    <% if (true) { %>
+    <div class="btn-toolbar mb-2 mb-md-0">
+      <div class="btn-group me-2">
+        <a href="/" type="button" class="btn btn-sm btn-outline-secondary">Cancel</a>
+      </div>
     </div>
-    
-    <%- include('_alert.html'); %>
-    
-    
-        
-    <div class="col-md-8 col-lg-8">
-      <form name="<%=form.formName%>" method="<%=form.formMethod%>" action="<%=form.formAction%>">
+    <% } %>
+  </div>
+
+  <%- include('_alert.html'); %>
+
+  <div class="col-md-8 col-lg-8">
+    <form name="<%=form.formName%>" id="<%=form.formName%>" method="<%=form.formMethod%>" action="<%=form.formAction%>">
       <%- include('_form.html', {_form: form}); %>
-      <button type="submit" class="btn btn-primary">Save</button>
-      </form>
-    </div>
-
-
-  </main>
-  <%- include('_foot.html'); %>
+      <button type="submit" class="btn btn-success">Create</button>
+    </form>
+  </div>
+</main>
+<script>
+  let form = document.querySelector("#<%=form.formName%>")
+  form.addEventListener('submit', (e) => {
+    let multiselct = document.querySelectorAll(".multi___select")
+    multiselct.forEach((item) => {
+      for (let i = 0; i < item.options.length; i++) {
+        item.options[i].selected = true;
+      }
+    });
+  });
+</script>
+<%- include('_foot.html'); %>
