Campaign create and status change both in db and connect.

--- a/views/_form.html
+++ b/views/_form.html
@@ -71,7 +71,7 @@
 
 
     const addOptions = (selectElement, items) => {
-      console.log(selectElement.options);
+      // console.log(selectElement.options);
       items.forEach((item) => {
         selectElement.options[selectElement.options.length] = new Option(item.Name, item.Id);
       });
