--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -1,55 +1,72 @@
 <%- include('_head.html'); %>
-  <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-      <h1 class="h2">
-        <%= title %>
-      </h1>
-      <% if (true) { %>
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="btn-group me-2">
-            <a href="/create-campaign" type="button" class="btn btn-sm btn-outline-secondary">Create Campaign</a>
-          </div>
-        </div>
-        <% } %>
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">
+      <%= title %>
+    </h1>
+    <% if (true) { %>
+    <div class="btn-toolbar mb-2 mb-md-0">
+      <div class="btn-group me-2">
+        <a href="/create-campaign" type="button" class="btn btn-sm btn-outline-secondary">Create Campaign</a>
+      </div>
     </div>
+    <% } %>
+  </div>
 
-    <%- include('_alert.html'); %>
+  <%- include('_alert.html'); %>
 
-    <div class="table-responsive">
-      <table class="table table-bordered table-striped">
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Phone Number</th>
-            <th scope="col">Status</th>
-            <th scope="col">Agents</th>
-            <th scope="col">Created At</th>
-          </tr>
-        </thead>
-        <tbody class="table-group-divider">
-          <% campaigns.forEach(function(campaign){ %>
-            <tr>
-              <td>
-                <%=campaign.campaign_name%>
-              </td>
-              <td>
-                <%=campaign.phone_number_id%>
-              </td>
-              <td>
-                <div class="form-check form-switch">
-                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-                </div>
-              </td>
-              <td>
-                <%=campaign.agents.length%>
-              </td>
-              <td>
-                <%= new Date( parseInt(campaign.created_at)).toLocaleString();%>
-              </td>
-            </tr>
-            <% }); %>
-        </tbody>
-      </table>
-    </div>
-  </main>
-  <%- include('_foot.html'); %>
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Status</th>
+          <th scope="col">Agents</th>
+          <th scope="col">Created At</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <% campaigns.forEach(function(campaign){ %>
+        <tr>
+          <td>
+            <a href="#" onclick="javascript:alert('Under Development')" ><span data-feather="edit"></span></a>
+            &nbsp;&nbsp;
+            <%=campaign.campaign_name%>
+          </td>
+
+          <td>
+            <div class="form-check form-switch">
+              <input class="form-check-input campaign-status-switch" 
+              type="checkbox" 
+              <%-(campaign.status)?'checked':'' %> 
+              data-qid="<%=campaign.id%>" 
+              data-qname="<%=campaign.campaign_name%>"
+              role="switch">
+            </div>
+          </td>
+          <td>
+            <%=campaign.agents.length%>
+          </td>
+          <td>
+            <%= new Date( parseInt(campaign.created_at)).toLocaleString();%>
+          </td>
+        </tr>
+        <% }); %>
+      </tbody>
+    </table>
+  </div>
+</main>
+<script>
+  let statusSwitch = document.querySelectorAll('.campaign-status-switch');
+  statusSwitch.forEach((item) => {
+    item.addEventListener('click', async (switchEvent) => {
+      
+      
+      await fetch(`/set-campaign-status?id=${switchEvent.target.dataset.qid}&qname=${switchEvent.target.dataset.qname}&status=${switchEvent.target.checked}`);
+      
+
+    });
+  });
+</script>
+
+<%- include('_foot.html'); %>
