--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -1,8 +1,8 @@
 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
   <div class="position-sticky pt-3 sidebar-sticky">
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-      <span>Admin</span>
-      <a class="link-secondary" href="#" aria-label="Add a new report">
+      <span>Operations</span>
+      <a class="link-secondary" href="#">
         <span data-feather="settings" class="align-text-bottom"></span>
       </a>
     </h6>
@@ -20,7 +20,14 @@
           Create Campaign
         </a>
       </li>
-   
+
+      <li class="nav-item">
+        <a class="nav-link" href="/agent-distribution">
+          <span data-feather="users" class="align-text-bottom"></span>
+          Agent Distribution
+        </a>
+      </li>
+
    
     </ul>
 
@@ -45,5 +52,25 @@
         </a>
       </li>
     </ul>
+ 
+    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+      <span>Admin</span>
+      <a class="link-secondary" href="#">
+        <span data-feather="tool" class="align-text-bottom"></span>
+      </a>
+    </h6> 
+    <ul class="nav flex-column mb-2">
+
+      <li class="nav-item">
+        <a class="nav-link" href="#" onclick="javascrpt:alert('Under Development')">
+          <span data-feather="refresh-cw" class="align-text-bottom"></span>
+          Sync
+        </a>
+      </li>
+    </ul>
+ 
+ 
+ 
+ 
   </div>
 </nav>
