--- a/views/_foot.html
+++ b/views/_foot.html
@@ -3,5 +3,12 @@
 <script src="/javascripts/bootstrap.bundle.min.js"></script>
 <script src="/javascripts/feather.min.js"></script>
 <script src="/javascripts/client.js"></script>
+<script>
+  function show_loader() {
+    loading_modal = new bootstrap.Modal('#loading_modal');
+    loading_modal.show();
+  }
+</script>
 </body>
+
 </html>
