--- a/views/_head.html
+++ b/views/_head.html
@@ -30,7 +30,6 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="w-100 "></div>
-        <!-- <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search"> -->
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
                 <a class="nav-link px-3" href="#">Sign out</a>
@@ -38,5 +37,8 @@
         </div>
     </header>
     <div class="container-fluid">
+
+    <%- include('_loading.html'); %>
+
         <div class="row">
             <%- include('_sidemenu.html'); %>
