--- a/views/createcampaign.html
+++ b/views/createcampaign.html
@@ -18,19 +18,9 @@
   <div class="col-md-8 col-lg-8">
     <form name="<%=form.formName%>" id="<%=form.formName%>" method="<%=form.formMethod%>" action="<%=form.formAction%>">
       <%- include('_form.html', {_form: form}); %>
-      <button type="submit" class="btn btn-success">Create</button>
+      <button type="submit" class="btn btn-success" onclick="show_loader()">Create</button>
     </form>
   </div>
 </main>
-<script>
-  let form = document.querySelector("#<%=form.formName%>")
-  form.addEventListener('submit', (e) => {
-    let multiselct = document.querySelectorAll(".multi___select")
-    multiselct.forEach((item) => {
-      for (let i = 0; i < item.options.length; i++) {
-        item.options[i].selected = true;
-      }
-    });
-  });
-</script>
+
 <%- include('_foot.html'); %>
