--- a/views/agentdistribution.html
+++ b/views/agentdistribution.html
@@ -12,44 +12,128 @@
     </div>
     <% } %>
   </div>
-
-
   <%- include('_alert.html'); %>
-  <div class="col-md-8 col-lg-8">
-    <div class="row">
-      <div class="col-3">
-        <label for="selCampaign" class="mb-1">Campaigns</label>
-        <input type="text" class="form-control mb-2" placeholder="Search Campaign...">
-        <select multiple name="selCampaign" id="selCampaign" class="form-select" style="min-height: 130%;">
-          <% campaigns.forEach(function(campaign){ %>
-            <option value="<%=campaign.id%>"><%=campaign.campaign_name%></option>
-          <% }); %>
-        </select>
-      </div>
-      <div class="col-4">
-        <label for="selMappedAgents" class="mb-1">Mapped Agents</label>
-        <input type="text" class="form-control mb-2" placeholder="Search Agent...">
-        <select multiple name="selMappedAgents" id="selMappedAgents" class="form-select" style="min-height: 130%;"></select>
-      </div>
-      <div class="col-2 mt-4 pt-4 text-center">
-        <div class="btn-group-vertical btn-group-sm mt-4 pt-4" role="group" aria-label="Vertical button group">
-          <button type="button" class="btn btn-primary">&plus; Add</button>
-          <button type="button" class="btn btn-danger">&minus; Rem</button>
-          <button type="button" class="btn btn-success">&check; Save</button>
+  <form class="row g-3" id="frmAgentDistribution" method="post">
+    <div class="col-md-4">
+      <label for="selCampaign" class="mb-1">Campaigns</label>
+      <input type="text" class="form-control mb-2" placeholder="Search Campaign...">
+      <select size="10" name="selCampaign" id="selCampaign" class="form-select">
+        <% campaigns.forEach(function(campaign){ %>
+        <option value="<%=campaign.Id%>"><%=campaign.Name%></option>
+        <% }); %>
+      </select>
+    </div>
+    <div class="col-md-3">
+      <label for="selMappedAgents" class="mb-1">Mapped Agents</label>
+      <input type="text" class="form-control mb-2" placeholder="Search Agent...">
+      <select size="10" multiple name="selMappedAgents" id="selMappedAgents" class="form-select"></select>
+    </div>
+    <div class="col-md-2 text-center">
+      <label for="" class="mt-md-5"></label>
+      <div class="form-control py-4 mt-md-3 mb-sm-3" style="height: 76%;">
+        <div class="btn-group-vertical btn-group-sm">
+          <button type="button" class="btn btn-primary" id="btnAdd">&leftarrow; Add</button>
+          <button type="button" class="btn btn-danger" id="btnRem">&rightarrow; Rem</button>
+          <button type="submit" class="btn btn-success" id="btnSave">&check; Save</button>
         </div>
       </div>
-      <div class="col-3">
-        <label for="selAllAgents" class="mb-1">All Agents</label>
-        <input type="text" class="form-control mb-2" placeholder="Search Agent...">
-        <select multiple name="selAllAgents" id="selAllAgents" class="form-select" style="min-height: 130%;">
-        
-          <% agents.forEach(function(agent){ %>
-            <option value="<%=agent.Id%>"><%=agent.Username%></option>
-          <% }); %>        
-        
-        </select>
-      </div>
     </div>
-  </div>
+    <div class="col-md-3">
+      <label for="selAllAgents" class="mb-1">All Agents</label>
+      <input type="text" class="form-control mb-2" placeholder="Search Agent...">
+      <select size="10" multiple name="selAllAgents" id="selAllAgents" class="form-select">
+        <% agents.forEach(function(agent){ %>
+        <option value="<%=agent.Id%>"><%=agent.Username%></option>
+        <% }); %>
+      </select>
+    </div>
+    <input type="hidden" name="txtMappedAgentsPrev" id="txtMappedAgentsPrev">
+  </form>
 </main>
+<script>
+  document.addEventListener("DOMContentLoaded", (eDOMContentLoaded) => {
+    let agentDists = <%-JSON.stringify(agentDists);%>;
+    let campaigns = <%-JSON.stringify(campaigns);%>;
+    let agents = <%-JSON.stringify(agents);%>;
+    let selCampaign = document.getElementById('selCampaign');
+    let selMappedAgents = document.getElementById('selMappedAgents');
+    let selAllAgents = document.getElementById('selAllAgents');
+    let txtMappedAgentsPrev = document.getElementById('txtMappedAgentsPrev');
+    let frmAgentDistribution = document.getElementById('frmAgentDistribution');
+
+    const swapSelect = (fromSel, toSel) => {
+      let mathched = false;
+      let toRemove = []
+      for (let p = 0; p < fromSel.selectedOptions.length; p++) {
+        mathched = false;
+        let selectedOption = fromSel.selectedOptions[p].value;
+        for (let b = 0; b < toSel.options.length; b++) {
+          let bucketOption = toSel.options[b].value;
+          if (bucketOption == selectedOption) {
+            mathched = true;
+            break;
+          }
+        } // next s
+        if (!mathched) {
+          toSel.options[toSel.options.length] = new Option(
+            fromSel.selectedOptions[p].text,
+            fromSel.selectedOptions[p].value
+          );
+          toRemove.push(fromSel.selectedOptions[p].value)
+        } // end if !matched
+      } // next p
+      // Now remove added item(s) from the source select
+      let l = fromSel.length;
+      for (let i = 0; i < l; i++) {
+        if (typeof fromSel.options[i] != 'undefined' && toRemove.includes(fromSel.options[i].value)) {
+          fromSel.remove(i);
+          i--; //after remove the length will decrease by 1 
+        } // end if includes
+      } // next i
+    } // end function swapSelect
+
+    btnAdd.addEventListener('click', (evClickBtnAdd) => {
+      swapSelect(selAllAgents, selMappedAgents)
+    }); // btnAdd click event listener
+
+    btnRem.addEventListener('click', (evClickBtnAdd) => {
+      swapSelect(selMappedAgents, selAllAgents)
+    }); // btnRem click event listener
+
+    selCampaign.addEventListener('change', (evClickSelCampaign) => {
+      var agentsOfCampaign = agentDists.filter(function(entry) {
+        return entry.QueueId === evClickSelCampaign.target.value;
+      });
+      for (let i = selMappedAgents.options.length - 1; i >= 0; i--) {
+        selMappedAgents.remove(i);
+      }
+
+      txtMappedAgentsPrev.value = "";
+      for (agent of agentsOfCampaign) {
+        selMappedAgents.options[selMappedAgents.options.length] = new Option(agent.AgentName, agent.AgentId);
+        txtMappedAgentsPrev.value += (txtMappedAgentsPrev.value=="" ? agent.AgentId  : ";" + agent.AgentId)
+      }
+      for (let i = selAllAgents.options.length - 1; i >= 0; i--) {
+        selAllAgents.remove(i);
+      }
+      for (agent of agents) {
+        let agentExist = false;
+        if (agentsOfCampaign.some(e => e.AgentId == agent.Id)) {
+          agentExist = true
+        }
+        if (!agentExist) {
+          selAllAgents.options[selAllAgents.options.length] = new Option(agent.Username, agent.Id);
+        }
+      } // next agent
+    }); // selCampaign click event listener
+    // Make all options of selMappedAgents selected on form submission
+    frmAgentDistribution.addEventListener('submit', (e) => {
+      show_loader();
+      for (let i = 0; i < selMappedAgents.options.length; i++) {
+        selMappedAgents.options[i].selected = true;
+      }
+    }); // frmAgentDistribution submit event listener
+
+  }); // DOMContentLoaded event listener
+</script>
 <%- include('_foot.html'); %>
