--- a/views/_head.html
+++ b/views/_head.html
@@ -7,19 +7,16 @@
     <meta name="description" content="">
     <meta name="author" content="a_r_p">
 
-    <title>Connect Admin - <%= title %>
-    </title>
-    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <title>Connect Admin - <%= title %></title>
 
     <!-- Favicons -->
-
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/images/favicon_io/site.webmanifest">
-
-
-    <!-- Custom styles for this template -->
+    <!-- Bootstrap 5 -->
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles -->
     <link href="/stylesheets/client.css" rel="stylesheet">
 </head>
 
@@ -37,8 +34,6 @@
         </div>
     </header>
     <div class="container-fluid">
-
     <%- include('_loading.html'); %>
-
         <div class="row">
             <%- include('_sidemenu.html'); %>
