--- a/views/_loading.html
+++ b/views/_loading.html
@@ -5,11 +5,11 @@
       <div class="modal-body bg-gradient-dark">
           <div class="d-flex justify-content-center mt-2">
               <div class="spinner-border text-primary" role="status" style="width: 4rem; height: 4rem;" >
-                  <span class="visually-hidden">Working...</span>
+                  <span class="visually-hidden">Loading...</span>
               </div>
           </div>
           <div class="d-flex justify-content-center mt-3">
-              <h5 class="text-primary">Working</h5>
+              <h5 class="text-primary">Loading</h5>
           </div>            
       </div>
     </div>
