--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -8,21 +8,21 @@
     </h6>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="/campaigns">
+        <a class="nav-link spinner-trigger" aria-current="page" href="/campaigns">
           <span data-feather="list" class="align-text-bottom"></span>
           Campaigns
         </a>
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="/create-campaign">
+        <a class="nav-link spinner-trigger" href="/create-campaign">
           <span data-feather="plus-square" class="align-text-bottom"></span>
           Create Campaign
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/agent-distribution">
+        <a class="nav-link spinner-trigger" href="/agent-distribution">
           <span data-feather="users" class="align-text-bottom"></span>
           Agent Distribution
         </a>
@@ -40,19 +40,19 @@
 
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        <a class="nav-link" href="/campaign-dashboard">
+        <a class="nav-link spinner-trigger" href="/campaign-dashboard">
           <span data-feather="server" class="align-text-bottom"></span>
           Campaign Dashboard
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/agent-dashboard">
+        <a class="nav-link spinner-trigger" href="/agent-dashboard">
           <span data-feather="users" class="align-text-bottom"></span>
           Agent Dashboard
         </a>
       </li>
     </ul>
- 
+<!--  
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
       <span>Admin</span>
       <a class="link-secondary" href="#">
@@ -60,7 +60,6 @@
       </a>
     </h6> 
     <ul class="nav flex-column mb-2">
-
       <li class="nav-item">
         <a class="nav-link" href="#" onclick="javascrpt:alert('Under Development')">
           <span data-feather="refresh-cw" class="align-text-bottom"></span>
@@ -68,9 +67,6 @@
         </a>
       </li>
     </ul>
- 
- 
- 
- 
+  -->
   </div>
 </nav>
