lazy-load-agent-distribution

--- a/views/_foot.html
+++ b/views/_foot.html
@@ -4,9 +4,12 @@
 <script src="/javascripts/feather.min.js"></script>
 <script src="/javascripts/client.js"></script>
 <script>
+  loading_modal = new bootstrap.Modal('#loading_modal');
   function show_loader() {
-    loading_modal = new bootstrap.Modal('#loading_modal');
     loading_modal.show();
+  }
+  function hide_loader() {
+    loading_modal.hide();
   }
   document.addEventListener("DOMContentLoaded", (ev) => {
     let spinnerTargets = document.querySelectorAll('.spinner-trigger');
