fix-lazy-load-agent-distribution

--- a/views/agentdistribution.html
+++ b/views/agentdistribution.html
@@ -30,8 +30,7 @@
         <div class="btn-group-vertical btn-group-sm">
           <button type="button" class="btn btn-primary" id="btnAdd">&leftarrow; Add</button>
           <button type="button" class="btn btn-danger" id="btnRem">&rightarrow; Rem</button>
-          <button type="submit" class="btn btn-success" id="btnSaveSubmit">&check; Save</button>
-          <button type="button" class="btn btn-info" id="btnSave">&rightarrow; SAVE-2</button>
+          <button type="button" class="btn btn-success" id="btnSave">&check; Save</button>
         </div>
       </div>
     </div>
