--- a/views/_loading.html
+++ b/views/_loading.html
@@ -2,7 +2,7 @@
 <div class="modal fade" id="loading_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-body bg-gradient-dark">
+      <div class="modal-body">
           <div class="d-flex justify-content-center mt-2">
               <div class="spinner-border text-primary" role="status" style="width: 4rem; height: 4rem;" >
                   <span class="visually-hidden">Loading...</span>
