--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -13,11 +13,18 @@
           Campaigns
         </a>
       </li>
-      
+
       <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/create-campaign">
           <span data-feather="plus-square" class="align-text-bottom"></span>
           Create Campaign
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link spinner-trigger" href="/agent-provision">
+          <span data-feather="user-check" class="align-text-bottom"></span>
+          Agent Provision
         </a>
       </li>
 
@@ -27,8 +34,6 @@
           Agent Distribution
         </a>
       </li>
-
-   
     </ul>
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
@@ -47,12 +52,12 @@
       </li>
       <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/agent-dashboard">
-          <span data-feather="users" class="align-text-bottom"></span>
+          <span data-feather="bar-chart-2" class="align-text-bottom"></span>
           Agent Dashboard
         </a>
       </li>
     </ul>
-<!--  
+    <!--  
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
       <span>Admin</span>
       <a class="link-secondary" href="#">
