Created view and provision of agent

--- a/views/createcampaign.html
+++ b/views/createcampaign.html
@@ -7,7 +7,7 @@
     <% if (true) { %>
     <div class="btn-toolbar mb-2 mb-md-0">
       <div class="btn-group me-2">
-        <a href="/" type="button" class="btn btn-sm btn-outline-secondary">Cancel</a>
+        <a href="/" type="button" class="btn btn-sm btn-outline-secondary spinner-trigger">Cancel</a>
       </div>
     </div>
     <% } %>
