--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -4,10 +4,10 @@
       <h1 class="h2">
         <%= title %>
       </h1>
-      <% if (false) { %>
+      <% if (1) { %>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Add Agent</button>
+            <a href="/" type="button" class="btn btn-sm btn-outline-secondary spinner-trigger">Home</a>
           </div>
         </div>
         <% } %>
