--- a/views/_loading.html
+++ b/views/_loading.html
@@ -9,7 +9,7 @@
               </div>
           </div>
           <div class="d-flex justify-content-center mt-3">
-              <h5 class="text-primary">Loading</h5>
+              <h5 class="text-primary">Please wait while Loading....</h5>
           </div>            
       </div>
     </div>
