--- a/views/agentprovision.html
+++ b/views/agentprovision.html
@@ -7,40 +7,52 @@
     <% if (true) { %>
     <div class="btn-toolbar mb-2 mb-md-0">
       <div class="btn-group me-2">
-        <a href="/" class="btn btn-sm btn-outline-secondary">Cancel</a>
+        <a href="/" class="btn btn-sm btn-outline-secondary spinner-trigger">Cancel</a>
       </div>
     </div>
     <% } %>
   </div>
   <%- include('_alert.html'); %>
-  <div class="row g-3">
-    <div class="col-md-4">
-      <label for="selCampaign" class="mb-1">Campaigns</label>
-      <input type="text" class="form-control mb-2" placeholder="Search Campaign..." id="txtSearchCampaign">
-      <select size="10" name="selCampaign" id="selCampaign" class="form-select"></select>
-    </div>
-    <div class="col-md-3">
-      <label for="selMappedAgents" class="mb-1">Mapped Agents</label>
+  <div class="row">
+    <div class="col-md-5">
+      <label for="selUnprovisioned" class="mb-1">Unprovisioned Agents</label>
       <input type="text" class="form-control mb-2" placeholder="Search Agent..." id="txtSearchAgent">
-      <select size="10" multiple name="selMappedAgents" id="selMappedAgents" class="form-select"></select>
+      <select size="15" multiple name="selUnprovisioned" id="selUnprovisioned" class="form-select">
+        <% unprovisionedAgents.forEach(function(agents){%>
+        <option value="<%=agents.agentId%>"><%=agents.agentName%></option>
+        <%});%>
+      </select>
     </div>
-    <div class="col-md-2 text-center">
-      <label for="" class="mt-md-5"></label>
-      <div class="form-control py-4 mt-md-3 mb-sm-3" style="height: 76%;">
-        <div class="btn-group-vertical btn-group-sm">
-          <button type="button" class="btn btn-primary" id="btnAdd">&leftarrow; Add</button>
-          <button type="button" class="btn btn-danger" id="btnRem">&rightarrow; Rem</button>
-          <button type="button" class="btn btn-success" id="btnSave">&check; Save</button>
-        </div>
-      </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 mt-3">
+      <button type="button" class="btn btn-success" id="btnProvision">&rightarrow; Provision Selected Agents</button>
     </div>
-    <div class="col-md-3">
-      <label for="selAllAgents" class="mb-1">All Agents</label>
-      <input type="text" class="form-control mb-2" placeholder="Search Agent..." id="txtSearchAllAgent">
-      <select size=" 10" multiple name="selAllAgents" id="selAllAgents" class="form-select"></select>
-    </div>
-    <input type="hidden" name="txtMappedAgentsPrev" id="txtMappedAgentsPrev">
-    <input type="hidden" name="txtCampaignName" id="txtCampaignName">
   </div>
 </main>
+<script>
+  document.addEventListener("DOMContentLoaded", async (eDOMContentLoaded) => {
+    const SLEEP_MS = 1500;
+    let selUnprovisioned = document.getElementById('selUnprovisioned');
+    let btnProvision = document.getElementById('btnProvision');
+    txtSearchAgent.addEventListener("keyup", (ev) => {
+      filterOptions(ev.target.value, selUnprovisioned.getElementsByTagName('option'));
+    }); // txtSearchAgent.addEventListener("keyup")
+    btnProvision.addEventListener("click", async (evClickBtnSave) => {
+      if (!selUnprovisioned.selectedOptions.length) {
+        alert("No Agent Selected");
+        return;
+      }
+      show_loader()
+      for (let i = 0; i < selUnprovisioned.selectedOptions.length; i++) {
+        let agentId = selUnprovisioned.selectedOptions[i].value;
+        let agentName = selUnprovisioned.selectedOptions[i].text;
+        let response = await fetch(`/agent-provision/provision-agent?agentid=${agentId}&agentname=${agentName}`);
+        await sleep(SLEEP_MS);
+      } // next selUnprovisioned.selectedOptions[i]
+      hide_loader();
+      window.location.replace('/agent-provision/provision-agent-success')
+    }); // btnProvision.addEventListener("click")
+  }); //document.addEventListener("DOMContentLoaded")
+</script>
 <%- include('_foot.html'); %>
