--- a/views/agents.html
+++ b/views/agents.html
@@ -7,7 +7,7 @@
       <% if (true) { %>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Add Agent</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary spinner-trigger">Add Agent</button>
           </div>
         </div>
         <% } %>
