--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -7,7 +7,7 @@
     <% if (true) { %>
     <div class="btn-toolbar mb-2 mb-md-0">
       <div class="btn-group me-2">
-        <a href="/create-campaign" type="button" class="btn btn-sm btn-outline-secondary">Create Campaign</a>
+        <a href="/create-campaign" type="button" class="btn btn-sm btn-outline-secondary spinner-trigger">Create Campaign</a>
       </div>
     </div>
     <% } %>
