--- a/views/customreport.html
+++ b/views/customreport.html
@@ -7,7 +7,7 @@
       <% if (true) { %>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Filter Options</button>
+            <a href="/" type="button" class="btn btn-sm btn-outline-secondary spinner-trigger">Home</a>
           </div>
         </div>
         <% } %>
