--- a/views/_head.html
+++ b/views/_head.html
@@ -16,6 +16,7 @@
     <link rel="manifest" href="/images/favicon_io/site.webmanifest"> 
     <!-- Bootstrap 5 -->
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/simple-datatables.css" rel="stylesheet">
     <!-- Custom styles -->
     <link href="/stylesheets/client.css" rel="stylesheet">
 </head>
